SERVER-21096: only record election win in PV1